# career-page-crawler

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: bab931f29ef9_initial_schema.py
configs/: search.yaml  user_agents.txt
internal-llm-example/: 1-simple-agent.py
src/crawler/: engine.py  jobspy_adapter.py  main.py  settings.py
src/crawler/anti_throttle/: circuit.py  delays.py  fingerprint.py  proxies.py
src/crawler/db/: models.py  queries.py  session.py
src/crawler/generic/: cache.py  extractor.py  fetcher.py
tests/: conftest.py  test_anti_throttle.py  test_extractor.py  test_jobspy_adapter.py
